# robot_kinematic_viewer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  all_rebuild.sh  auto_build.sh  build.sh  format_cpp.sh  imgui.ini
config/: robot_kinematic_viewer.yaml  robot_kinematic_viewer_unitree_g1.yaml  trajectory_playback_demo.yaml  trajectory_playback_demo_g1.yaml  trajectory_playback_demo_g1_simple.yaml  trajectorydemo.yaml
config/trajectories/: galbot_g1_dance_full.csv  galbot_g1_dance_left_action1.csv  galbot_g1_dance_pure.csv  galbot_g1_dance_slide_in.csv  galbot_g1_playback.csv  galbot_g1_playback.yaml  unitree_g1_playback.csv  unitree_g1_playback.yaml
docs/: ROBOT_KINEMATIC_VIEWER_DESIGN.md
include/KHR/: khrplatform.h
include/glad/: glad.h
include/ik_backends/flex_ik/: flex_ik.h  types.h  utils.h
include/ik_backends/wbc_chain_ik/wbc/math/: helper_functions.h  types.h
include/ik_backends/wbc_chain_ik/wbc/robot/traits/: chain_ik.h
include/ik_backends/wbc_chain_ik/wbc/solver/: hqp_solver.h  qp_data.h  qp_solver.h
include/kinematic_viewer/: kinematic_bootstrap.h  kinematic_collision_monitor.h  kinematic_initial_pose.h  kinematic_line_renderer.h  kinematic_marker_target_state.h  kinematic_marker_utils.h  kinematic_playback.h  kinematic_ros_bridge.h  kinematic_runtime_state.h  kinematic_shader_utils.h  kinematic_sidebar_panels.h  kinematic_ui_feedback.h  kinematic_ui_theme.h  kinematic_user_obstacles.h  kinematic_viewer_config.h
include/teleop_viewer/: config_types.h  ik_solver.h  scene.h  types.h
scripts/: collect_dep.sh  copy_files_for_release.sh  import_dance_trajectory.py  rviz_ik_interactive_marker.py  start_rviz_ik_stack.sh
src/: robot_kinematic_viewer.cpp
src/ik_backends/flex_ik/: flex_ik.cc
src/ik_backends/wbc_chain_ik/math/: helper_functions.cpp
src/ik_backends/wbc_chain_ik/robot/traits/: chain_ik.cpp
src/ik_backends/wbc_chain_ik/solver/: hqp_solver.cpp  qp_solver.cpp
src/kinematic_viewer/: kinematic_bootstrap.cpp  kinematic_collision_monitor.cpp  kinematic_initial_pose.cpp  kinematic_line_renderer.cpp  kinematic_marker_target_state.cpp  kinematic_marker_utils.cpp  kinematic_playback.cpp  kinematic_ros_bridge.cpp  kinematic_shader_utils.cpp  kinematic_sidebar_panels.cpp  kinematic_ui_feedback.cpp  kinematic_ui_theme.cpp  kinematic_user_obstacles.cpp  kinematic_viewer_config.cpp
src/teleop_viewer/: ik_solver.cpp  scene.cpp
